--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Animated",
+  "name": "ReAnt",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "15.2.1",
-    "react-native": "^0.30.0"
+    "react-native": "^0.30.0",
+    "react-native-svg": "^4.2.0"
   }
 }
